--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 </head>
 <body>
     <div class="home">
-        <nav class="navbar navbar-expand-md bg-dark navbar-dark">
+        <nav class="navbar navbar-expand-md bg-light navbar-dark">
             <!-- Brand -->
             <a class="navbar-brand" href="#"><span>App</span>Lab</a>
           
@@ -220,6 +220,51 @@
         </div>
       </div>
     </div>
+
+    <div class="container">
+      <div class="built">
+        <div class="row">
+          <div class="col-m-4 p-4">
+            <h2 class="p-4">Ultimate features that we built</h2>
+            <p class="">The rise of mobile devices transforms the way we consume information entirely.</p>
+          </div>
+          <div class="col-m-4"></div>
+          <div class="col-m-4"></div>
+        </div>
+        <div class="row">
+          <div class="col-md-6">
+            <div class="boxes">
+              <div class="box p-3">
+                <img class="img-fluid p-4" src="./img/ultimate_icon1.png" alt="">
+                <h4>App Development</h4>
+                <p>Get your blood tests delivered at home collect a sample from the news your blood tests.</p>
+              </div>
+              <div class="box p-3">
+                <img class="img-fluid p-4" src="./img/ultimate_icon2.png" alt="">
+                <h4>UX Planing</h4>
+                <p>Get your blood tests delivered at home collect a sample from the news your blood tests.</p>
+              </div>
+            </div>
+            <div class="boxes">
+              <div class="box p-3">
+                <img class="img-fluid p-4" src="./img/chooseapp_icon3 (1).png" alt="">
+                <h4>App Development</h4>
+                <p>Get your blood tests delivered at home collect a sample from the news your blood tests.</p>
+              </div>
+              <div class="box img-fluid p-4">
+                <img class="img-fluid p-3" src="./img/ultimate_icon4.png" alt="">
+                <h4>UX Planing</h4>
+                <p>Get your blood tests delivered at home collect a sample from the news your blood tests.</p>
+              </div>
+            </div>
+          </div>
+          <div class="col-md-6">
+            <img class="img-fluid" src="./img/ultimate_feature_img.png" alt="">
+          </div>
+        </div>
+      </div>
+    </div>
+
     <script src="./bootstrap-4.4.1-dist/js/bootstrap.min.js"></script>
 </body>
 </html>
