--- a/index.html
+++ b/index.html
@@ -6,12 +6,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css" integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous"/>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="./bootstrap-4.4.1-dist/css/bootstrap.min.css">
-    <title>Document</title>
+    <title>AppLap</title>
 </head>
 <body>
-    <div class="home">
+    <div class="home" id="home">
         <nav class="navbar navbar-expand-md bg-light navbar-dark">
             <!-- Brand -->
             <a class="navbar-brand" href="#"><span>App</span>Lab</a>
@@ -25,7 +26,7 @@
             <div class="collapse navbar-collapse" id="collapsibleNavbar">
               <ul class="navbar-nav">
                 <li class="nav-item">
-                  <a class="nav-link" href="#">Home</a>
+                  <a class="nav-link" href="#home">Home</a>
                 </li>
                 <li class="nav-item">
                   <a class="nav-link" href="#">Key Features</a>
@@ -56,7 +57,7 @@
                             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ducimus, ipsam voluptates omnis magnam minus molestias consequuntur aliquam consectetur? Numquam, et!</p>
                         </div>
                         <div class="box box3">
-                            <button class="btn">Try For Free</button>
+                            <button class="btn btn2">Try For Free</button>
                             <button class="btn btn1">Watch demo video</button>
                         </div>
                     </div>
@@ -224,12 +225,12 @@
     <div class="container">
       <div class="built">
         <div class="row">
-          <div class="col-m-4 p-4">
+          <div class="col-md-4 p-4">
             <h2 class="p-4">Ultimate features that we built</h2>
             <p class="">The rise of mobile devices transforms the way we consume information entirely.</p>
           </div>
-          <div class="col-m-4"></div>
-          <div class="col-m-4"></div>
+          <div class="col-md-4"></div>
+          <div class="col-md-4"></div>
         </div>
         <div class="row">
           <div class="col-md-6">
@@ -257,6 +258,7 @@
                 <p>Get your blood tests delivered at home collect a sample from the news your blood tests.</p>
               </div>
             </div>
+            <button class="btn btn2">Sell All</button>
           </div>
           <div class="col-md-6">
             <img class="img-fluid" src="./img/ultimate_feature_img.png" alt="">
@@ -265,6 +267,195 @@
       </div>
     </div>
 
+    <div class="pricing">
+      <div class="container">
+        <div class="top text-center">
+          <h2>Get awesome features, without extra charges</h2>
+          <p>The rise of mobile devices transforms the way we consume information entirely and the world's most elevant channels such as Facebook.</p>
+        </div>
+        <p class="text-center">
+          <a class="btn btn-primary text-center" data-bs-toggle="collapse" href="#collapseExample" role="button" aria-expanded="false" aria-controls="collapseExample">
+            Month
+          </a>
+          <button class="btn btn-primary text-center type="button" data-bs-toggle="collapse" data-bs-target="#collapseExample" aria-expanded="false" aria-controls="collapseExample">
+            Years
+          </button>
+        </p>
+        <div class="collapse" id="collapseExample">
+          <div class="row text-center">
+            <div class="col-md-4">
+              <h2><span>0$</span>/month</h2>
+              <h4>Business Class</h4>
+              <h5>For small teams or office</h5>
+              <p>Drag & Drop Builder</p>
+              <p>1,000's of Templates</p>
+              <p>Blog Support Tools</p>
+              <p>eCommerce Store</p>
+              <button class="btn btn2">Start Free Trail</button>
+            </div>
+            <div class="col-md-4">
+              <h2><span>99$</span>/month</h2>
+              <h4>Pro Master</h4>
+              <h5>For Best opportunities</h5>
+              <p>Drag & Drop Builder</p>
+              <p>1,000's of Templates</p>
+              <p>Blog Support Tools</p>
+              <p>eCommerce Store</p>
+              <button class="btn btn2">Subcriber Now</button>
+              <button class="btn1 btn"></button>
+              <h6>Or Start 14 days trail</h6>
+            </div>
+            <div class="col-md-4">
+              <h2><span>0$</span>/month</h2>
+              <h4>Premium</h4>
+              <h5>For small teams or office</h5>
+              <p>Drag & Drop Builder</p>
+              <p>1,000's of Templates</p>
+              <p>Blog Support Tools</p>
+              <p>eCommerce Store</p>
+              <button class="btn btn2">Start Free Trail</button>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <div class="client">
+      <div class="container">
+        <div class="row">
+          <div class="col-md-6 first">
+          </div>
+          <div class="col-md-6">
+            <h2>Meet Client Satisfaction by using product</h2>
+            <p>The rise of mobile devices transforms the way we consume. elevant channels such as Facebook.</p>
+            <div class="boxes">
+              <div class="icon">
+                <i class="fas fa-star" style="color: gold"></i>
+                <i class="fas fa-star" style="color: gold"></i>
+                <i class="fas fa-star" style="color: gold"></i>
+                <i class="fas fa-star" style="color: gold"></i>
+                <i class="fas fa-star" style="color: gold"></i>
+              </div>
+              <h4>User friendly &amp; Customizable</h4>
+              <p>Bring to the table win-win survival strategies to ensure proactive domi- nation. At the end of the day, going forward, a new normal that has evolved from generation X is on the runway heading towards a streamlined cloud solution. User generated content in real-time will have multiple touchpoints for offshoring.</p>
+              <div class="quti">
+                <img src="./img/meet_img.png" alt="">
+                <div class="quticha">
+                  <h4>Zoltan Nameth</h4>
+                  <p>CEO Of Pixler Lab</p>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <div class="faq">
+      <div class="container p-5">
+        <h2 class=" text-center">Frequently asked questions</h2>
+        <p class=" text-center">The rise of mobile devices transforms the way we consume information entirely and the world's most elevant channels such as Facebook.</p>
+        <div class="accordion" id="accordionExample">
+          <div class="accordion-item">
+            <h2 class="accordion-header" id="headingOne">
+              <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
+                <h4>How to contact with riders emergency?</h4>
+              </button>
+            </h2>
+            <div id="collapseOne" class="accordion-collapse collapse show" aria-labelledby="headingOne" data-bs-parent="#accordionExample">
+              <div class="accordion-body">
+                <p>Leverage agile frameworks to provide a robust synopsis for high level overviews. Iterative approaches to corporate strategy foster collaborative thinking to further the overall value proposition. Organically grow the holistic world view of disruptive innovation via workplace diversity and empowerment.</p>
+              </div>
+            </div>
+          </div>
+          <div class="accordion-item">
+            <h2 class="accordion-header" id="headingTwo">
+              <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
+                <h4>App installation failed, how to update system information?</h4>
+              </button>
+            </h2>
+            <div id="collapseTwo" class="accordion-collapse collapse" aria-labelledby="headingTwo" data-bs-parent="#accordionExample">
+              <div class="accordion-body">
+                <p>Leverage agile frameworks to provide a robust synopsis for high level overviews. Iterative approaches to corporate strategy foster collaborative thinking to further the overall value proposition. Organically grow the holistic world view of disruptive innovation via workplace diversity and empowerment.</p>
+              </div>
+            </div>
+          </div>
+          <div class="accordion-item">
+            <h2 class="accordion-header" id="headingThree">
+              <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
+                <h4>Website response taking time, how to improve</h4>
+              </button>
+            </h2>
+            <div id="collapseThree" class="accordion-collapse collapse" aria-labelledby="headingThree" data-bs-parent="#accordionExample">
+              <div class="accordion-body">
+                <p>Leverage agile frameworks to provide a robust synopsis for high level overviews. Iterative approaches to corporate strategy foster collaborative thinking to further the overall value proposition. Organically grow the holistic world view of disruptive innovation via workplace diversity and empowerment.</p>
+              </div>
+            </div>
+          </div>
+          <div class="accordion-item">
+            <h2 class="accordion-header" id="headingFour">
+              <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapseFour" aria-expanded="true" aria-controls="collapseOne">
+                <h4>New update fixed all bug and issues</h4>
+              </button>
+            </h2>
+            <div id="collapseFour" class="accordion-collapse collapse show" aria-labelledby="headingFour" data-bs-parent="#accordionExample">
+              <div class="accordion-body">
+                <p>Leverage agile frameworks to provide a robust synopsis for high level overviews. Iterative approaches to corporate strategy foster collaborative thinking to further the overall value proposition. Organically grow the holistic world view of disruptive innovation via workplace diversity and empowerment.</p>
+              </div>
+            </div>
+          </div>
+          <div class="accordion-item">
+            <h2 class="accordion-header" id="headingFive">
+              <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseFive" aria-expanded="false" aria-controls="collapseFive">
+                <h4>How to contact with riders</h4>
+              </button>
+            </h2>
+            <div id="collapseFive" class="accordion-collapse collapse" aria-labelledby="headingFive" data-bs-parent="#accordionExample">
+              <div class="accordion-body">
+                <p>Leverage agile frameworks to provide a robust synopsis for high level overviews. Iterative approaches to corporate strategy foster collaborative thinking to further the overall value proposition. Organically grow the holistic world view of disruptive innovation via workplace diversity and empowerment.</p>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+    
+    <div class="download">
+      <div class="container">
+        <div class="row">
+          <div class="col-md-6">
+            <h2> Download our App now !</h2>
+            <p>The rise of mobile devices transforms the way we consume information entirely and the world's most elevant channels such as Facebook.</p>
+            <div class="rasm d-flex p-3">
+              <img class="img-fluid w-50 p-3" src="./img/play.png" alt="">
+              <img class="img-fluid w-50 p-3" src="./img/play app store.png" alt="">
+            </div>
+          </div>
+          <div class="col-md-6">
+            <img class="img-fluid" src="./img/download_img.png" alt="">
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <footer class="footer"> 
+        <h3><span>App</span>Lap</h3>
+        <div class="link">
+          <a class="nav-link" href="#">Home</a>
+          <a class="nav-link" href="#">Key Features</a>
+          <a class="nav-link" href="#">Pricing</a>
+          <a class="nav-link" href="#">Testiminial</a>
+          <a class="nav-link" href="#">FAQ</a>
+        </div>
+        <div class="icon">
+          <i class="fab fa-facebook fa-2x"></i>
+          <i class="fab fa-twitter fa-2x"></i>
+          <i class="fas fa-hashtag fa-2x"></i>
+          <i class="fab fa-google-plus-g fa-2x"></i>
+        </div>
+    </footer>
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-/bQdsTh/da6pkI1MST/rWKFNjaCP5gBSY4sEBT38Q/9RBh9AH40zEOg7Hlq2THRZ" crossorigin="anonymous"></script>
     <script src="./bootstrap-4.4.1-dist/js/bootstrap.min.js"></script>
 </body>
 </html>
