--- a/index.html
+++ b/index.html
@@ -281,7 +281,7 @@
             Years
           </button>
         </p>
-        <div class="collapse" id="collapseExample">
+        <div class="collapse show" id="collapseExample">
           <div class="row text-center">
             <div class="col-md-4">
               <h2><span>0$</span>/month</h2>
@@ -355,7 +355,7 @@
       <div class="container p-5">
         <h2 class=" text-center">Frequently asked questions</h2>
         <p class=" text-center">The rise of mobile devices transforms the way we consume information entirely and the world's most elevant channels such as Facebook.</p>
-        <div class="accordion" id="accordionExample">
+        <div class="accordion " id="accordionExample">
           <div class="accordion-item">
             <h2 class="accordion-header" id="headingOne">
               <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
@@ -448,11 +448,12 @@
           <a class="nav-link" href="#">FAQ</a>
         </div>
         <div class="icon">
-          <i class="fab fa-facebook fa-2x"></i>
+          <i class="fab fa-facebook-f fa-2x"></i>
           <i class="fab fa-twitter fa-2x"></i>
           <i class="fas fa-hashtag fa-2x"></i>
           <i class="fab fa-google-plus-g fa-2x"></i>
         </div>
+        <p>Copyright © AppLab 2020. All rights reserved</p>
     </footer>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-/bQdsTh/da6pkI1MST/rWKFNjaCP5gBSY4sEBT38Q/9RBh9AH40zEOg7Hlq2THRZ" crossorigin="anonymous"></script>
